Querybuilder connected to Models

--- a/views/contact.twig.html
+++ b/views/contact.twig.html
@@ -3,8 +3,6 @@
 {% block title %}Index{%endblock %}
 
 {% block content %}
-Hi From
-<h1>{{ app }}</h1>
+Contact us from <b>{{ user.name }}</b>
 <br>
-<h2>This the index Page</h2>
 {% endblock %}
